--- a/grid-layout.html
+++ b/grid-layout.html
@@ -14,7 +14,7 @@
       <div class="item"></div>
       <div class="item colorYellow"></div>
       <div class="item"></div>
-      <div class="item verde"></div>
+      <div class="item green-2"></div>
       <div class="item"></div>
       <div class="item colorYellow"></div>
     </div>
