--- a/grid-layout.html
+++ b/grid-layout.html
@@ -16,7 +16,7 @@
       <div class="item"></div>
       <div class="item verde"></div>
       <div class="item"></div>
-      <div class="item colorYellow"></div>
+      <div class="item yellow"></div>
     </div>
   </body>
 </html>
